# csick

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  dist-workspace.toml
src/: csick.rs  main.rs
src/csick/: cli.rs  generate.rs  mapping.rs  parsing.rs  setup.rs  types.rs  watch.rs
src/csick/example_files/: cmake_ex.txt  csick_ex.h  csick_ex.rs  lib_ex.rs
wix/: main.wxs
